--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -39,11 +39,20 @@
         </section>
         <!-- /* banner */ -->
         <section class="banner position-relative">
-            <div class="container">
-                <div class="swiper proj_mouth">
+            <div class="container h-100">
+                <div class="swiper proj_mouth m-0 h-100">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-
+                        <div class="swiper-slide item position-relative">
+                            <div class="content w-75">
+                                <p>PROJECT OF THE MONTH</p>
+                                <h3>JW MARRIOT PHU QUOC RESORT</h3>
+                            </div>
+                        </div>
+                        <div class="swiper-slide item position-relative">
+                            <div class="content w-75">
+                                <p>PROJECT OF THE MONTH</p>
+                                <h3>JW MARRIOT DA LAT RESORT</h3>
+                            </div>
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -51,6 +60,15 @@
                 </div>
             </div>
         </section>
+        <!-- /* Our Services */ -->
+        <section class="Our_Services">
+            <div class="container">
+                <h2 class="title">
+                    Our Services
+                </h2>
+            </div>
+        </section>
+
         <!-- Swiper JS -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </div>
