--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="col-8 text-center">
                             <a href="/">
-                                <img src="images/logo.svg" width="55" id="img-logo-ref" alt="logo">
+                                <img src="images/logo.svg" width="55" id="img-logo-ref" alt="logo" loading="lazy">
                             </a>
                         </div>
                         <div class="col-2 d-flex align-items-center menu_right">
@@ -65,6 +65,49 @@
             <div class="container">
                 <h2 class="title">
                     Our Services
+                </h2>
+                <div class="swiper services_list">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide item">
+                            <img class="w-100" src="images/susan-wilkinson-1DvlOy6BcmI-unsplash.png" alt=""
+                                loading="lazy">
+                            <p class="pt-2 m-0">Fabric</p>
+                        </div>
+                        <div class="swiper-slide item">
+                            <img class="w-100" src="images/elimende-inagella-hO4AGt3czSQ-unsplash.png" alt=""
+                                loading="lazy">
+                            <p class="pt-2 m-0">Leather</p>
+                        </div>
+                        <div class="swiper-slide item">
+                            <img class="w-100" src="images/susan-wilkinson-1DvlOy6BcmI-unsplash.png" alt=""
+                                loading="lazy">
+                            <p class="pt-2 m-0">Wall Covering</p>
+                        </div>
+                        <div class="swiper-slide item">
+                            <img class="w-100" src="images/jon-tyson-un5DGskIJuE-unsplash.png" alt="" loading="lazy">
+                            <p class="pt-2 m-0">Curtain</p>
+                        </div>
+                        <div class="swiper-slide item">
+                            <img class="w-100" src="images/susan-wilkinson-1DvlOy6BcmI-unsplash.png" alt=""
+                                loading="lazy">
+                            <p class="pt-2 m-0">Fabric</p>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- /* Trending */ -->
+        <section class="trending">
+            <div class="container">
+                <h2 class="title text-center line_1">
+                    <span>W</span>hat’s
+                </h2>
+                <h2 class="title text-center line_2">
+                    Trending
                 </h2>
             </div>
         </section>
