--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -109,8 +109,116 @@
                 <h2 class="title text-center line_2">
                     Trending
                 </h2>
+                <div class="box_trending d-flex">
+                    <div class="left">
+                        <img class="w-100" src="images/tissu-copenhague-d1316c6a4eb874a2be0ed06c73bc.png" alt="">
+                    </div>
+                    <div class="right d-grid">
+                        <div class="context">
+                            <p>Fabric</p>
+                            <h3>Copenhague</h3>
+                            <a href="#">SEE COLLECTION <img src="images/arrow-right-beige800.svg" alt=""></a>
+                        </div>
+                        <img class="w-100 img" src="images/tissu-copenhague-d1316c6a4eb874a2be0ed06c73bc1.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
+        <!-- /* project */ -->
+        <section class="project position-relative">
+            <div class="container">
+                <h2 class="title text-center">
+                    Projects we are proud of
+                </h2>
+            </div>
+            <img class="background_proj w-100" src="images/bg_1.png" alt="">
+        </section>
+        <!-- /* clients */ -->
+        <section class="clients">
+            <div class="container">
+                <h2 class="title text-center">
+                    SELECTED CL<span>I</span>ENTS
+                </h2>
+                <div class="list_clients">
+                    <h3>JW Marriot | Park Hyatt | Aman | Ritz-Carlton | Six Senses |Hilton | Four Seasons | JW Marriot |
+                        Park Hyatt | Aman | Ritz-Carlton | Six Senses |Hilton | Four Seasons</h3>
+                </div>
+            </div>
+            <div class="line_list">
+
+            </div>
+        </section>
+
+        <footer>
+            <div class="line">
+                <ul class="d-flex">
+                    <li><img src="images/Exclude.svg" alt=""> SOPHISTICATED</li>
+                    <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                    <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                    <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                    <li><img src="images/Exclude.svg" alt=""> SOPHISTICATED</li>
+                    <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                    <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                    <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                    <li><img src="images/Exclude.svg" alt=""> SOPHISTICATED</li>
+                    <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                    <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                    <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                    <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                    <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                    <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                    <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                    <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                    <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                    <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                    <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                    <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                </ul>
+            </div>
+            <div class="footer-middle">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-lg-3 col-md-6">
+                            <h3 class="box-footer-title">START A CONVERSATION</h3>
+                            <ul class="list-cate">
+                                <li>
+                                    <a href="mailto:hello@dpceline.com">hello@dpceline.com</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <h3 class="box-footer-title">OUR OFFICE</h3>
+                            <ul class="list-cate">
+                                <li>
+                                    39/09 Street 48, Hiep Binh Chanh, Thu Duc, Ho Chi Minh City 70000
+                                </li>
+                                <li>
+                                    <a href="tel:024-0000-0000">024-0000-0000</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <h3 class="box-footer-title">SOCIAL MEDIA</h3>
+                            <ul class="list-cate">
+                                <li>
+                                    <a href="">Twitter (X)</a>
+                                </li>
+                                <li>
+                                    <a href="">Instagram</a>
+                                </li>
+                                <li>
+                                    <a href="">Facebook</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>DP CÉLINE</p>
+            </div>
+        </footer>
+
 
         <!-- Swiper JS -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
