--- a/dpc-web/product-fabric-detail.html
+++ b/dpc-web/product-fabric-detail.html
@@ -74,11 +74,11 @@
 
                     <div class="row mt-3 lable-general">
                         <div class="d-flex directory">
-                            <a class="back-directory">All products</a>
+                            <a class="back-directory" href="./product-fabric-collection.html">All products</a>
                             <a class="back-directory" style="cursor: default">/</a>
-                            <a class="back-directory">Fabric</a>
+                            <a class="back-directory" href="./product-fabric-design.html">Fabric</a>
                             <a class="back-directory" style="cursor: default">/</a>
-                            <a class="back-directory">Collection</a>
+                            <a class="back-directory" href="./product-fabric-collection.html">Collection</a>
                             <a class="back-directory" style="cursor: default">/</a>
                             <a class="back-directory">Deluxe</a>
                             <a class="back-directory" style="cursor: default">/</a>
