--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -40,7 +40,7 @@
                 </div>
             </section>
 
-            <!-- <section class="banner">
+            <section class="banner">
                 <div class="container-project">
                     <div class="row">
                         <img src="images/component1.jpg" alt="Image 1" class="image c-hp-mosaic__item top " loading="lazy">
@@ -50,7 +50,12 @@
                         <div class="middle-container">
                             <div class="swiper proj_mouth m-0 h-100">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide item position-relative">
+                                    <div class="swiper-slide item">
+                                        <div class="image w-100">
+                                            <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
+                                            loading="lazy">
+                                            <div class="overlay"></div>
+                                        </div>
                                         <div class="content w-75">
                                             <a href="./our-project.html" style="text-decoration: none;">
                                                 <p>PROJECT OF THE MONTH</p>
@@ -58,8 +63,13 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="swiper-slide item position-relative">
-                                        <div class="content">
+                                    <div class="swiper-slide item">
+                                        <div class="image w-100">
+                                            <img src="images/project/project2/1.png" alt=""
+                                            loading="lazy">
+                                            <div class="overlay"></div>
+                                        </div>
+                                        <div class="content w-75">
                                             <p>PROJECT OF THE MONTH</p>
                                             <h3>JW MARRIOT DA LAT RESORT</h3>
                                         </div>
@@ -76,7 +86,7 @@
                         <img src="images/component5.jpg " alt="Image 6" class="image c-hp-mosaic__item bottom2" loading="lazy">
                     </div>
                 </div>
-            </section> -->
+            </section>
 
             <!-- /* banner */ -->
             <section class="banner position-relative mt-5">
@@ -208,7 +218,7 @@
                                     </div>
                                     <div class="flip-card-back">
                                         <!-- Bạn có thể thêm nội dung hoặc hình ảnh khác ở mặt sau -->
-                                        <img class="w-100" src="images/alen-kajtezovic-S-AI-1k0F1k-unsplash.png" alt="Back Image">
+                                        <img class="w-100" src="images/acacia-collection/collection-sunlight.jpg" alt="Back Image">
                                     </div>
                                 </div>
                             </div>
@@ -224,7 +234,7 @@
                                         </div>
                                         <div class="flip-card-back">
                                             <p>Fabric</p>
-                                            <h3>Copenhague</h3>
+                                            <h3>Natural Story</h3>
                                             <a href="./product-fabric-collection.html">SEE COLLECTION <img src="images/arrow-right-beige800.svg" alt=""></a>
                                         </div>
                                     </div>
@@ -237,7 +247,7 @@
                                             <img class="w-100 img" src="images/tissu-copenhague-d1316c6a4eb874a2be0ed06c73bc1.png" alt="">
                                         </div>
                                         <div class="flip-card-back">
-                                            <img class="w-100 img" src="images/tissu-copenhague-d1316c6a4eb874a2be0ed06c73bc1.png" alt="Back Image">
+                                            <img class="w-100 img" src="images/acacia-collection/collection-sunlight.jpg" alt="Back Image">
                                         </div>
                                     </div>
                                 </div>                            
