--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -40,7 +40,7 @@
                 </div>
             </section>
 
-            <section class="banner">
+            <!-- <section class="banner">
                 <div class="container-project">
                     <div class="row">
                         <img src="images/component1.jpg" alt="Image 1" class="image c-hp-mosaic__item top " loading="lazy">
@@ -86,7 +86,7 @@
                         <img src="images/component5.jpg " alt="Image 6" class="image c-hp-mosaic__item bottom2" loading="lazy">
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- /* banner */ -->
             <section class="banner position-relative mt-5">
@@ -218,7 +218,7 @@
                                     </div>
                                     <div class="flip-card-back">
                                         <!-- Bạn có thể thêm nội dung hoặc hình ảnh khác ở mặt sau -->
-                                        <img class="w-100" src="images/acacia-collection/collection-sunlight.jpg" alt="Back Image">
+                                        <img class="w-100" src="images/acacia-collection/collection-naturalstory.jpg" alt="Back Image">
                                     </div>
                                 </div>
                             </div>
@@ -247,7 +247,7 @@
                                             <img class="w-100 img" src="images/tissu-copenhague-d1316c6a4eb874a2be0ed06c73bc1.png" alt="">
                                         </div>
                                         <div class="flip-card-back">
-                                            <img class="w-100 img" src="images/acacia-collection/collection-sunlight.jpg" alt="Back Image">
+                                            <img class="w-100 img" src="images/acacia-collection/collection-naturalstory-01.jpg" alt="Back Image">
                                         </div>
                                     </div>
                                 </div>                            
