--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -43,10 +43,10 @@
             <!-- <section class="banner">
                 <div class="container-project">
                     <div class="row">
-                        <img src="images/component1.jpg" alt="Image 1" class="image c-hp-mosaic__item top " loading="lazy">
+                        <img src="images/component1.jpg" alt="Image 1" class="imagetop " loading="lazy">
                     </div>
                     <div class="row">
-                        <img src="images/component2.jpg" alt="Image 2" class="image c-hp-mosaic__item left" loading="lazy">
+                        <img src="images/component2.jpg" alt="Image 2" class="imageleft" loading="lazy">
                         <div class="middle-container">
                             <div class="swiper proj_mouth m-0 h-100">
                                 <div class="swiper-wrapper">
@@ -91,36 +91,49 @@
             <!-- /* banner */ -->
             <section class="banner position-relative mt-5">
                 
-                <div class="container h-100">
-                    <div class="swiper proj_mouth m-0 h-100">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide item">
-                                <div class="image w-100">
-                                    <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
-                                    loading="lazy">
-                                    <div class="overlay"></div>
+                <div class="container-project">
+                    <div class="row">
+                        <img src="images/component1.jpg" alt="Image 1" class="imagetop" loading="lazy">
+                    </div>
+                    <div class="row d-flex">
+                        <img src="images/component2.jpg" alt="Image 2" class="image_midleft" loading="lazy">
+                        <div class="container h-100">
+                            <div class="swiper proj_mouth m-0 h-100">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide item">
+                                        <div class="image w-100" id="zoomImage" >
+                                            <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
+                                            loading="lazy">
+                                            <div class="overlay"></div>
+                                        </div>
+                                        <div class="content w-75">
+                                            <a href="./our-project.html" style="text-decoration: none;">
+                                                <p>PROJECT OF THE MONTH</p>
+                                                <h3>JW MARRIOT PHU QUOC RESORT</h3>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide item">
+                                        <div class="image w-100" id="zoomImage">
+                                            <img src="images/project/project2/1.png" alt=""
+                                            loading="lazy">
+                                            <div class="overlay"></div>
+                                        </div>
+                                        <div class="content w-75">
+                                            <p>PROJECT OF THE MONTH</p>
+                                            <h3>JW MARRIOT DA LAT RESORT</h3>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="content w-75">
-                                    <a href="./our-project.html" style="text-decoration: none;">
-                                        <p>PROJECT OF THE MONTH</p>
-                                        <h3>JW MARRIOT PHU QUOC RESORT</h3>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="swiper-slide item">
-                                <div class="image w-100">
-                                    <img src="images/project/project2/1.png" alt=""
-                                    loading="lazy">
-                                    <div class="overlay"></div>
-                                </div>
-                                <div class="content w-75">
-                                    <p>PROJECT OF THE MONTH</p>
-                                    <h3>JW MARRIOT DA LAT RESORT</h3>
-                                </div>
+                                <div class="swiper-button-next"></div>
+                                <div class="swiper-button-prev"></div>
                             </div>
                         </div>
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
+                        <img src="images/component3.jpg" alt="Image 4" class="image_midright" loading="lazy">
+                    </div>
+                    <div class="row">
+                        <img src="images/component4.jpg" alt="Image 5" class="image_bottom1" loading="lazy">
+                        <img src="images/component5.jpg " alt="Image 6" class="image_bottom2" loading="lazy">
                     </div>
                 </div>
             </section>
