--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -90,50 +90,44 @@
 
             <!-- /* banner */ -->
             <section class="banner position-relative mt-5">
-                
-                <div class="container-project">
-                    <div class="row">
-                        <img src="images/component1.jpg" alt="Image 1" class="imagetop" loading="lazy">
-                    </div>
-                    <div class="row d-flex">
-                        <img src="images/component2.jpg" alt="Image 2" class="image_midleft" loading="lazy">
-                        <div class="container h-100">
-                            <div class="swiper proj_mouth m-0 h-100">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide item">
-                                        <div class="image w-100" id="zoomImage" >
-                                            <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
-                                            loading="lazy">
-                                            <div class="overlay"></div>
-                                        </div>
-                                        <div class="content w-75">
-                                            <a href="./our-project.html" style="text-decoration: none;">
-                                                <p>PROJECT OF THE MONTH</p>
-                                                <h3>JW MARRIOT PHU QUOC RESORT</h3>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide item">
-                                        <div class="image w-100" id="zoomImage">
-                                            <img src="images/project/project2/1.png" alt=""
-                                            loading="lazy">
-                                            <div class="overlay"></div>
-                                        </div>
-                                        <div class="content w-75">
-                                            <p>PROJECT OF THE MONTH</p>
-                                            <h3>JW MARRIOT DA LAT RESORT</h3>
-                                        </div>
-                                    </div>
+        
+                <div class="container h-100">
+                    <div class="swiper proj_mouth m-0 h-100">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide item">
+                                <div class="image w-100" id="zoomImage" >
+                                    <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
+                                    loading="lazy">
+                                    <div class="overlay"></div>
                                 </div>
-                                <div class="swiper-button-next"></div>
-                                <div class="swiper-button-prev"></div>
+                                <div class="cover-images">
+                                    <img src="images/component1.jpg" alt="Cover Image 1" class="cover-image topimg" loading="lazy">
+                                    <img src="images/component2.jpg" alt="Cover Image 2" class="cover-image center-left" loading="lazy">
+                                    <img src="images/component3.jpg" alt="Cover Image 3" class="cover-image center-right" loading="lazy">
+                                    <img src="images/component4.jpg" alt="Cover Image 4" class="cover-image bottom-left" loading="lazy">
+                                    <img src="images/component5.jpg" alt="Cover Image 5" class="cover-image bottom-right" loading="lazy">
+                                </div>
+                                <div class="content w-75">
+                                    <a href="./our-project.html" style="text-decoration: none;">
+                                        <p>PROJECT OF THE MONTH</p>
+                                        <h3>JW MARRIOT PHU QUOC RESORT</h3>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide item">
+                                <div class="image w-100" id="zoomImage">
+                                    <img src="images/project/project2/1.png" alt=""
+                                    loading="lazy">
+                                    <div class="overlay"></div>
+                                </div>
+                                <div class="content w-75">
+                                    <p>PROJECT OF THE MONTH</p>
+                                    <h3>JW MARRIOT DA LAT RESORT</h3>
+                                </div>
                             </div>
                         </div>
-                        <img src="images/component3.jpg" alt="Image 4" class="image_midright" loading="lazy">
-                    </div>
-                    <div class="row">
-                        <img src="images/component4.jpg" alt="Image 5" class="image_bottom1" loading="lazy">
-                        <img src="images/component5.jpg " alt="Image 6" class="image_bottom2" loading="lazy">
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
                 </div>
             </section>
