--- a/dpc-web/product-leather-design.html
+++ b/dpc-web/product-leather-design.html
@@ -868,6 +868,29 @@
                         <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
                         <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
                     </ul>
+                    <ul class="d-flex">
+                        <li><img src="images/Exclude.svg" alt=""> SOPHISTICATED</li>
+                        <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                        <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                        <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                        <li><img src="images/Exclude.svg" alt=""> SOPHISTICATED</li>
+                        <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                        <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                        <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                        <li><img src="images/Exclude.svg" alt=""> SOPHISTICATED</li>
+                        <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                        <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                        <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                        <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                        <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                        <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                        <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                        <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                        <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                        <li><img src="images/Exclude.svg" alt=""> PROFESSIONAL</li>
+                        <li><img src="images/Exclude.svg" alt=""> LUXURIOUS</li>
+                        <li><img src="images/Exclude.svg" alt=""> SUSTAINABLE</li>
+                    </ul>
                 </div>
                 <div class="footer-middle">
                     <div class="container">
@@ -876,7 +899,7 @@
                                 <h3 class="box-footer-title">START A CONVERSATION</h3>
                                 <ul class="list-cate">
                                     <li>
-                                        <a href="mailto:hello@dpceline.com">hello@dpceline.com</a>
+                                        <a href="mailto:hello@dpceline.com" id="contact-mail">info@dpceline.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -884,10 +907,10 @@
                                 <h3 class="box-footer-title">OUR OFFICE</h3>
                                 <ul class="list-cate">
                                     <li>
-                                        39/09 Street 48, Hiep Binh Chanh, Thu Duc, Ho Chi Minh City 70000
+                                        89L Street 48, Hiep Binh Chanh, Thu Duc, Ho Chi Minh City 70000
                                     </li>
                                     <li>
-                                        <a href="tel:024-0000-0000">024-0000-0000</a>
+                                        <a href="tel:024-0000-0000">(+84)93-944-1023</a>
                                     </li>
                                 </ul>
                             </div>
@@ -901,7 +924,7 @@
                                         <a href="">Instagram</a>
                                     </li>
                                     <li>
-                                        <a href="">Facebook</a>
+                                        <a href="https://www.facebook.com/PavoVietNam.Co.Ltd">Facebook</a>
                                     </li>
                                 </ul>
                             </div>
