--- a/dpc-web/homepage2.html
+++ b/dpc-web/homepage2.html
@@ -149,7 +149,7 @@
                                     
                                     <div class="image w-100" id="zoomImage" >
                                         <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
-                                        loading="lazy">
+                                        loading="lazy" class="image_inside">
                                         <div class="overlay"></div>
                                     </div>
                                     <div class="content w-75">
