--- a/dpc-web/test.html
+++ b/dpc-web/test.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="./css/style_test.css">
 </head>
 <body>
-    <div class="container">
-        <div class="frame">
-            <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
-                                            loading="lazy" class="image">
+    <section class="a">
+        <div class="container">
+            <div class="frame">
+                <img src="images/spacejoy-YI2YkyaREHk-unsplash.jpg" alt=""
+                                                loading="lazy" class="image">
+            </div>
         </div>
-    </div>
+    </section>
     <div class="content">
         <!-- Additional content to enable scrolling -->
         <p>Scroll down to see the effect...</p>
     </div>
+
     <script src="./js/scripts_test.js"></script>
 </body>
 </html>
