--- a/dpc-web/t.html
+++ b/dpc-web/t.html
@@ -47,7 +47,7 @@
         left: 50%;
         width: 1400px; /* Kích thước đầy đủ của ảnh */
         height: 860px; /* Kích thước đầy đủ của ảnh */
-        transform: translate(-50%, -50%);
+        /* transform: translate(-50%, -50%); */
 
       }
       
